--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d build"
+
   },
+  "homepage": 
+     "https://github.com/ganeshvrma/portfolio-vg"
+
+  ,
   "dependencies": {
     "@remixicon/react": "^4.6.0",
     "react": "^18.3.1",
@@ -25,6 +32,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
